--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <header class="max-w-6xl mx-auto px-4 py-16 flex flex-col md:flex-row items-center gap-12">
         <img src="https://via.placeholder.com/250" alt="Profile" class="w-64 h-64 rounded-full border-4 border-white shadow-lg object-cover">
         <div>
-            <h1 class="text-4xl font-extrabold text-slate-900 mb-4">Senior GIS Specialist & Researcher</h1>
+            <h1 class="text-4xl font-extrabold text-slate-900 mb-4">Senior Geospatial Professional | PMP® | Digital Data Translator</h1>
             <p class="text-lg text-slate-600 leading-relaxed mb-6">
-                9+ years of experience in geospatial analysis, leadership, and cartographic design. Specialized in Web GIS, remote sensing, and spatial data science to solve complex environmental challenges.
+                Strategic Geospatial Solutions Architect with 11+ years of expertise in delivering 40+ international projects. I specialize in the convergence of GeoAI, LiDAR, and UAS technology to solve complex problems in water management and civil engineering. As a PMP® professional and Digital Data Translator, I focus on automating workflows and deploying advanced spatial intelligence to optimize project lifecycles.
             </p>
             <div class="flex gap-4">
                 <a href="contact.html" class="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700 transition shadow-md">Get in Touch</a>
@@ -53,4 +53,5 @@
     </section>
 
 </body>
+
 </html>
