--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="bg-slate-50 text-slate-800 font-sans">
 
     <header class="max-w-6xl mx-auto px-4 py-16 flex flex-col md:flex-row items-center gap-12">
-        <img src="https://via.placeholder.com/250" alt="Profile" class="w-64 h-64 rounded-full border-4 border-white shadow-lg object-cover">
+        <img src="assets/profile.jpg" alt="Profile" class="w-64 h-64 rounded-full border-4 border-white shadow-lg object-cover">
         <div>
             <h1 class="text-4xl font-extrabold text-slate-900 mb-4">Senior Geospatial Professional | PMP® | Digital Data Translator</h1>
             <p class="text-lg text-slate-600 leading-relaxed mb-6">
@@ -55,3 +55,4 @@
 </body>
 
 </html>
+
