--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 <body class="bg-slate-50 text-slate-800 font-sans">
 
     <header class="max-w-6xl mx-auto px-4 py-16 flex flex-col md:flex-row items-center gap-12">
-        <img src="assets/profile.jpg" alt="Profile" class="w-64 h-64 rounded-full border-4 border-white shadow-lg object-cover">
+        <div class="relative group">
+            <div class="absolute -inset-1.5 bg-gradient-to-r from-cyan-400 via-blue-500 to-purple-600 rounded-full blur opacity-75 group-hover:opacity-100 transition duration-1000 group-hover:duration-200"></div>
+            <img 
+            src="assets/profile.jpg" 
+            alt="Senior Geospatial Professional." 
+            class="relative w-64 h-64 rounded-full border-4 border-white object-cover shadow-2xl bg-slate-200"
+            onerror="this.src='https://ui-avatars.com/api/?name=GIS+Pro&background=0D8ABC&color=fff&size=256'">
+        </div>
         <div>
             <h1 class="text-4xl font-extrabold text-slate-900 mb-4">Senior Geospatial Professional | PMP® | Digital Data Translator</h1>
             <p class="text-lg text-slate-600 leading-relaxed mb-6">
@@ -55,4 +62,5 @@
 </body>
 
 </html>
+
 
