--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             onerror="this.src='https://ui-avatars.com/api/?name=GIS+Pro&background=0D8ABC&color=fff&size=256'">
         </div>
         <div>
-            <h1 class="text-4xl font-extrabold text-slate-900 mb-4">Senior Geospatial Professional | PMP® | Digital Data Translator</h1>
+            <h1 class="text-4xl font-extrabold text-slate-900 mb-4">Strategic Geospatial Solutions Architect | PMP® | Digital Data Translator</h1>
             <p class="text-lg text-slate-600 leading-relaxed mb-6">
-                Strategic Geospatial Solutions Architect with 11+ years of expertise in delivering 40+ international projects. I specialize in the convergence of GeoAI, LiDAR, and UAS technology to solve complex problems in water management and civil engineering. As a PMP® professional and Digital Data Translator, I focus on automating workflows and deploying advanced spatial intelligence to optimize project lifecycles.
+                 Over 11+ years of expertise in delivering 30+ multinational projects. Specialize in the convergence of GeoAI, GIS, LiDAR, and Remote Sensing technologies to solve complex problems in Civil and Infrastructure. As a PMP® professional and Digital Data Translator, I focus on automating workflows and deploying advanced spatial intelligence to optimize project lifecycles.
             </p>
             <div class="flex gap-4">
                 <a href="contact.html" class="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700 transition shadow-md">Get in Touch</a>
@@ -62,5 +62,6 @@
 </body>
 
 </html>
+
 
 
