--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 <body class="bg-slate-50 text-slate-800 font-sans">
 
     <header class="max-w-6xl mx-auto px-4 py-16 flex flex-col md:flex-row items-center gap-12">
-        <div class="relative group">
-            <div class="absolute -inset-1.5 bg-gradient-to-r from-cyan-400 via-blue-500 to-purple-600 rounded-full blur opacity-75 group-hover:opacity-100 transition duration-1000 group-hover:duration-200"></div>
-            <img 
-            src="assets/profile.jpg" 
-            alt="Senior Geospatial Professional." 
-            class="relative w-64 h-64 rounded-full border-4 border-white object-cover shadow-2xl bg-slate-200"
-            onerror="this.src='https://ui-avatars.com/api/?name=GIS+Pro&background=0D8ABC&color=fff&size=256'">
+    <div class="relative flex-shrink-0 group w-64 h-64">
+        <div class="absolute -inset-1 bg-gradient-to-tr from-cyan-400 via-blue-500 to-purple-600 rounded-full blur opacity-75 group-hover:opacity-100 transition duration-500"></div>
+            <div class="relative w-full h-full rounded-full border-4 border-white overflow-hidden bg-slate-200">
+                <img 
+                    src="assets/profile.jpg" 
+                    alt="Senior Geospatial Professional" 
+                    class="w-full h-full object-cover"
+                    onerror="this.src='https://ui-avatars.com/api/?name=GIS+Pro&background=0D8ABC&color=fff&size=512'">
+            </div>
         </div>
         <div>
             <h1 class="text-4xl font-extrabold text-slate-900 mb-4">Strategic Geospatial Solutions Architect | PMP® | Digital Data Translator</h1>
@@ -62,6 +64,7 @@
 </body>
 
 </html>
+
 
 
 
