--- a/index.html
+++ b/index.html
@@ -33,9 +33,16 @@
     </header>
 
     <section class="max-w-6xl mx-auto px-4 py-12 grid md:grid-cols-3 gap-8">
-        <div class="bg-white p-6 rounded-xl shadow-sm border border-slate-100">
-            <h3 class="font-bold text-blue-600 mb-2">Certifications</h3>
-            <p class="text-sm text-slate-500">GISP, Esri Technical Certifications, and PMP certified.</p>
+        <div class="bg-white p-6 rounded-xl shadow-sm border border-slate-100 hover:shadow-md transition-shadow">
+        <h3 class="font-bold text-blue-600 mb-3 flex items-center">
+        <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+        Certifications
+        </h3>
+            <ul class="text-sm text-slate-600 space-y-2 list-disc list-inside marker:text-blue-500">
+                <li>GISP® Certified Professional</li>
+                <li>Esri Technical Certifications</li>
+                <li>PMP® Project Management</li>
+            </ul>
         </div>
         <div class="bg-white p-6 rounded-xl shadow-sm border border-slate-100">
             <h3 class="font-bold text-blue-600 mb-2">Key Skills</h3>
@@ -59,11 +66,32 @@
                 <p class="text-sm text-slate-500">Leading a team of 5 analysts on climate resiliency mapping and automated cloud-based processing pipelines.</p>
             </a>
         </div>
+        <div class="space-y-8">
+            <a href="projects.html?year=2026" class="block bg-white p-8 rounded-xl shadow-sm border-l-4 border-blue-600 hover:shadow-md transition">
+                <div class="flex justify-between items-start mb-2">
+                    <h3 class="text-xl font-bold">Lead Geospatial Analyst</h3>
+                    <span class="text-slate-400 font-mono">2024 - Present</span>
+                </div>
+                <p class="text-slate-600 mb-4">Global Environmental Agency</p>
+                <p class="text-sm text-slate-500">Leading a team of 5 analysts on climate resiliency mapping and automated cloud-based processing pipelines.</p>
+            </a>
+        </div>
+        <div class="space-y-8">
+            <a href="projects.html?year=2026" class="block bg-white p-8 rounded-xl shadow-sm border-l-4 border-blue-600 hover:shadow-md transition">
+                <div class="flex justify-between items-start mb-2">
+                    <h3 class="text-xl font-bold">Lead Geospatial Analyst</h3>
+                    <span class="text-slate-400 font-mono">2024 - Present</span>
+                </div>
+                <p class="text-slate-600 mb-4">Global Environmental Agency</p>
+                <p class="text-sm text-slate-500">Leading a team of 5 analysts on climate resiliency mapping and automated cloud-based processing pipelines.</p>
+            </a>
+        </div>
     </section>
 
 </body>
 
 </html>
+
 
 
 
