--- a/projects.html
+++ b/projects.html
@@ -14,12 +14,16 @@
         </div>
         
         <div class="flex flex-wrap gap-2 mb-10">
-            <button class="filter-btn bg-blue-600 text-white px-4 py-2 rounded shadow" data-year="all">All</button>
-            <button class="filter-btn bg-white border px-4 py-2 rounded shadow" data-year="2026">2026</button>
-            <button class="filter-btn bg-white border px-4 py-2 rounded shadow" data-year="2025">2025</button>
+            <button class="filter-btn bg-blue-600 text-white px-4 py-2 rounded-full shadow-sm text-sm" data-year="all">All Projects</button>
+            <button class="filter-btn bg-white border text-slate-600 px-4 py-2 rounded-full shadow-sm text-sm" data-year="2024">2024</button>
+            <button class="filter-btn bg-white border text-slate-600 px-4 py-2 rounded-full shadow-sm text-sm" data-year="2023">2023</button>
+            <button class="filter-btn bg-white border text-slate-600 px-4 py-2 rounded-full shadow-sm text-sm" data-year="2022">2022</button>
+            <button class="filter-btn bg-white border text-slate-600 px-4 py-2 rounded-full shadow-sm text-sm" data-year="2021">2021</button>
+            <button class="filter-btn bg-white border text-slate-600 px-4 py-2 rounded-full shadow-sm text-sm" data-year="2020">2020</button>
         </div>
 
         <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8" id="project-container"></div>
     </div>
 </body>
+
 </html>
