--- a/projects.html
+++ b/projects.html
@@ -20,6 +20,8 @@
             <button class="filter-btn bg-white border text-slate-600 px-4 py-2 rounded-full shadow-sm text-sm" data-year="2022">2022</button>
             <button class="filter-btn bg-white border text-slate-600 px-4 py-2 rounded-full shadow-sm text-sm" data-year="2021">2021</button>
             <button class="filter-btn bg-white border text-slate-600 px-4 py-2 rounded-full shadow-sm text-sm" data-year="2020">2020</button>
+            <button class="filter-btn bg-white border text-slate-600 px-4 py-2 rounded-full shadow-sm text-sm" data-year="2020">2019</button>
+            <button class="filter-btn bg-white border text-slate-600 px-4 py-2 rounded-full shadow-sm text-sm" data-year="2020">2018</button>
         </div>
 
         <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8" id="project-container"></div>
@@ -27,3 +29,4 @@
 </body>
 
 </html>
+
