--- a/projects.html
+++ b/projects.html
@@ -2,38 +2,58 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects | GIS Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="js/scripts.js" defer></script>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
-<body class="bg-slate-50">
-    <div class="max-w-6xl mx-auto px-4 py-12">
-        <div class="flex flex-col md:flex-row md:items-center justify-between gap-4 mb-8">
-            <h2 class="text-3xl font-bold">Project Portfolio</h2>
-            <input type="text" id="project-search" placeholder="Search by tool (e.g. Python)..." class="px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-400 outline-none">
-        </div>
+<body class="bg-slate-900 text-slate-100 font-sans leading-normal overflow-x-hidden">
+
+    <main class="max-w-6xl mx-auto px-4 py-16 relative z-10">
         
-            <div class="max-w-6xl mx-auto px-4 mb-12 relative z-10">
-                <h2 class="text-xs uppercase tracking-[0.2em] text-emerald-400 font-bold mb-6">Filter by Project Year</h2>
-                <div class="flex flex-wrap gap-3" id="filter-container">
-                    <button class="filter-btn active-filter" data-year="all">All Projects</button>
-                    <button class="filter-btn" data-year="2024">2024</button>
-                    <button class="filter-btn" data-year="2023">2023</button>
-                    <button class="filter-btn" data-year="2022">2022</button>
-                    <button class="filter-btn" data-year="2021">2021</button>
-                    <button class="filter-btn" data-year="2020">2020</button>
-                    <button class="filter-btn" data-year="2019">2019</button>
-                    <button class="filter-btn" data-year="2018">2018</button>
-                    <button class="filter-btn" data-year="2015">2015</button>
-                    <button class="filter-btn" data-year="2014">2014</button>
-                </div>
+        <div class="flex flex-col md:flex-row md:items-end justify-between gap-8 mb-12">
+            <div>
+                <h2 class="text-4xl font-black text-white tracking-tight uppercase">
+                    Project <span class="text-emerald-400">Portfolio</span>
+                </h2>
+                <div class="h-1.5 w-20 bg-emerald-500 mt-2 rounded-full"></div>
+                <p class="text-slate-400 mt-4 text-sm max-w-md italic">
+                    Exploring 11+ years of multinational geospatial solutions, from GeoAI to Hydrography.
+                </p>
             </div>
+            
+            <div class="w-full md:w-80">
+                <label for="project-search" class="block text-[10px] uppercase tracking-[0.2em] text-slate-500 font-bold mb-2">Search by tool or keyword</label>
+                <input type="text" id="project-search" placeholder="e.g. Python, LiDAR, MDEM..." 
+                    class="w-full px-4 py-3 rounded-xl outline-none transition-all">
+            </div>
+        </div>
 
-        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8" id="project-container"></div>
-    </div>
+        <section class="mb-12">
+            <h3 class="text-[10px] uppercase tracking-[0.2em] text-sky-400 font-bold mb-6">Filter by Project Year</h3>
+            <div class="flex flex-wrap gap-3" id="filter-container">
+                <button class="filter-btn active-filter" data-year="all">All Projects</button>
+                <button class="filter-btn" data-year="2024">2024</button>
+                <button class="filter-btn" data-year="2023">2023</button>
+                <button class="filter-btn" data-year="2022">2022</button>
+                <button class="filter-btn" data-year="2021">2021</button>
+                <button class="filter-btn" data-year="2020">2020</button>
+                <button class="filter-btn" data-year="2019">2019</button>
+                <button class="filter-btn" data-year="2018">2018</button>
+                <button class="filter-btn" data-year="2015">2015</button>
+                <button class="filter-btn" data-year="2014">2014</button>
+            </div>
+        </section>
+
+        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 mb-20" id="project-container">
+            <div class="col-span-full py-20 text-center">
+                <div class="inline-block animate-spin rounded-full h-8 w-8 border-t-2 border-emerald-500 border-r-2 border-transparent mb-4"></div>
+                <p class="text-slate-500 font-mono text-xs uppercase tracking-widest">Initialising Geospatial Database...</p>
+            </div>
+        </div>
+    </main>
+
 </body>
-
 </html>
-
-
-
