--- a/journals-conferences.html
+++ b/journals-conferences.html
@@ -2,55 +2,84 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Publications & Speaking | GIS Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Research & Publications | GIS Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="js/scripts.js" defer></script>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
-<body class="bg-slate-50">
-    <div class="max-w-5xl mx-auto px-4 py-16">
+<body class="bg-slate-900 text-slate-100 font-sans leading-normal overflow-x-hidden">
+
+    <main class="max-w-6xl mx-auto px-4 py-16 relative z-10">
         
+        <header class="mb-16">
+            <h2 class="text-4xl font-black text-white tracking-tight uppercase">
+                Research & <span class="text-emerald-400">Publications</span>
+            </h2>
+            <div class="h-1.5 w-20 bg-emerald-500 mt-2 rounded-full"></div>
+            <p class="text-slate-400 mt-4 text-sm max-w-2xl italic leading-relaxed">
+                Academic contributions and industry speaking engagements focusing on Urban Heat Islands, Multi-Sensor Fusion, and GeoAI automation.
+            </p>
+        </header>
+
         <section class="mb-20">
-            <h2 class="text-3xl font-bold text-slate-900 mb-8 border-b pb-4">Journal Publications</h2>
-            <div class="space-y-10">
-                <div class="group">
-                    <span class="text-blue-600 font-mono text-sm">2025</span>
-                    <h3 class="text-xl font-bold group-hover:text-blue-700 transition">Spatiotemporal Analysis of Urban Heat Islands using Multi-Sensor Fusion</h3>
-                    <p class="text-slate-600 mt-2 italic">Authors: Doe, J., Smith, A., & Lee, K.</p>
-                    <p class="text-slate-500 font-medium">International Journal of Remote Sensing</p>
-                    <a href="https://doi.org/xxxx" class="text-sm text-blue-500 underline mt-2 inline-block">DOI: 10.1080/XXXX.2025.XXXX</a>
-                </div>
+            <h3 class="text-[10px] uppercase tracking-[0.2em] text-sky-400 font-bold mb-8">Journal Publications</h3>
+            <div class="space-y-6">
+                <article class="glass-card p-8 border border-white/5 group hover:border-emerald-500/30 transition-all">
+                    <div class="flex flex-col md:flex-row md:items-center justify-between gap-4 mb-4">
+                        <span class="bg-emerald-500/20 text-emerald-400 font-mono text-xs px-2 py-1 rounded border border-emerald-500/30 font-bold w-fit">
+                            2025
+                        </span>
+                        <a href="https://doi.org/xxxx" target="_blank" class="text-xs text-sky-400 hover:text-sky-300 underline font-mono tracking-tighter">
+                            DOI: 10.1080/XXXX.2025.XXXX
+                        </a>
+                    </div>
+                    <h4 class="text-xl font-bold text-white group-hover:text-emerald-400 transition-colors mb-2">
+                        Spatiotemporal Analysis of Urban Heat Islands using Multi-Sensor Fusion
+                    </h4>
+                    <p class="text-slate-300 text-sm italic mb-2">Authors: Doe, J., Smith, A., & Lee, K.</p>
+                    <p class="text-slate-500 text-xs font-bold uppercase tracking-widest">International Journal of Remote Sensing</p>
+                </article>
             </div>
         </section>
 
         <section>
-            <h2 class="text-3xl font-bold text-slate-900 mb-8 border-b pb-4">Conferences & Workshops</h2>
-            <div class="overflow-x-auto">
-                <table class="w-full text-left border-collapse">
-                    <thead>
-                        <tr class="text-slate-400 text-sm uppercase tracking-wider">
-                            <th class="py-4 border-b">Conference Name</th>
-                            <th class="py-4 border-b">Location</th>
-                            <th class="py-4 border-b text-center">Year</th>
-                            <th class="py-4 border-b">Role</th>
-                        </tr>
-                    </thead>
-                    <tbody class="text-slate-700">
-                        <tr class="hover:bg-slate-100 transition">
-                            <td class="py-4 border-b font-medium">Esri User Conference</td>
-                            <td class="py-4 border-b">San Diego, CA</td>
-                            <td class="py-4 border-b text-center">2025</td>
-                            <td class="py-4 border-b"><span class="bg-green-100 text-green-700 text-xs px-2 py-1 rounded">Presenter</span></td>
-                        </tr>
-                        <tr class="hover:bg-slate-100 transition">
-                            <td class="py-4 border-b font-medium">FOSS4G Global</td>
-                            <td class="py-4 border-b">Seoul, South Korea</td>
-                            <td class="py-4 border-b text-center">2024</td>
-                            <td class="py-4 border-b"><span class="bg-slate-100 text-slate-700 text-xs px-2 py-1 rounded">Attendee</span></td>
-                        </tr>
-                    </tbody>
-                </table>
+            <h3 class="text-[10px] uppercase tracking-[0.2em] text-sky-400 font-bold mb-8">Conferences & Speaking</h3>
+            <div class="glass-card overflow-hidden border border-white/5">
+                <div class="overflow-x-auto">
+                    <table class="w-full text-left border-collapse">
+                        <thead>
+                            <tr class="bg-white/5 text-slate-400 text-[10px] uppercase tracking-widest">
+                                <th class="py-5 px-8 border-b border-white/10">Conference Name</th>
+                                <th class="py-5 px-8 border-b border-white/10">Location</th>
+                                <th class="py-5 px-8 border-b border-white/10 text-center">Year</th>
+                                <th class="py-5 px-8 border-b border-white/10 text-right">Role</th>
+                            </tr>
+                        </thead>
+                        <tbody class="text-slate-300 text-sm">
+                            <tr class="hover:bg-white/5 transition-colors border-b border-white/5">
+                                <td class="py-5 px-8 font-bold text-white">Esri User Conference</td>
+                                <td class="py-5 px-8">San Diego, CA</td>
+                                <td class="py-5 px-8 text-center font-mono">2025</td>
+                                <td class="py-5 px-8 text-right">
+                                    <span class="bg-emerald-500/10 text-emerald-400 text-[10px] px-3 py-1 rounded-full border border-emerald-500/20 font-bold uppercase">Presenter</span>
+                                </td>
+                            </tr>
+                            <tr class="hover:bg-white/5 transition-colors border-b border-white/5">
+                                <td class="py-5 px-8 font-bold text-white">FOSS4G Global</td>
+                                <td class="py-5 px-8">Seoul, South Korea</td>
+                                <td class="py-5 px-8 text-center font-mono">2024</td>
+                                <td class="py-5 px-8 text-right">
+                                    <span class="bg-slate-800 text-slate-400 text-[10px] px-3 py-1 rounded-full border border-white/5 font-bold uppercase">Attendee</span>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </section>
-    </div>
+    </main>
+
 </body>
 </html>
