--- a/skills-certifications.html
+++ b/skills-certifications.html
@@ -2,35 +2,64 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Certifications | GIS Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="js/scripts.js" defer></script>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
-<body class="bg-slate-50">
+<body class="bg-slate-900 text-slate-100 font-sans leading-normal overflow-x-hidden">
 
-    <div class="bg-slate-900 text-white py-12">
-        <div class="max-w-4xl mx-auto text-center px-4">
-            <div id="carousel" class="h-24 flex items-center justify-center">
-                <div class="cert-slide"><h3 class="text-2xl font-bold italic text-cyan-400">PMP® Certified Professional</h3></div>
-                <div class="cert-slide hidden"><h3 class="text-2xl font-bold italic text-blue-400">Esri Technical Certification</h3></div>
-                <div class="cert-slide hidden"><h3 class="text-2xl font-bold italic text-emerald-400">Digital Data Translation Specialist</h3></div>
+    <section class="relative bg-slate-900/50 py-16 border-b border-white/5 overflow-hidden">
+        <div class="absolute top-0 left-1/2 -translate-x-1/2 w-full h-full opacity-20 pointer-events-none">
+            <div class="absolute top-[-50%] left-[-10%] w-[60%] h-[100%] bg-sky-500 rounded-full blur-[150px]"></div>
+        </div>
+
+        <div class="max-w-4xl mx-auto text-center px-4 relative z-10">
+            <h2 class="text-[10px] uppercase tracking-[0.4em] text-slate-500 font-bold mb-8">Executive Credentials</h2>
+            <div id="carousel" class="h-32 flex items-center justify-center">
+                <div class="cert-slide transition-all duration-700">
+                    <h3 class="text-3xl md:text-4xl font-black italic text-transparent bg-clip-text bg-gradient-to-r from-emerald-400 to-cyan-400">PMP® Certified Professional</h3>
+                </div>
+                <div class="cert-slide hidden opacity-0 transition-all duration-700">
+                    <h3 class="text-3xl md:text-4xl font-black italic text-transparent bg-clip-text bg-gradient-to-r from-blue-400 to-indigo-400">Esri Technical Associate</h3>
+                </div>
+                <div class="cert-slide hidden opacity-0 transition-all duration-700">
+                    <h3 class="text-3xl md:text-4xl font-black italic text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 to-emerald-400">Data Translation Specialist</h3>
+                </div>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div class="max-w-6xl mx-auto px-4 py-12">
-        <div class="flex flex-col md:flex-row md:items-center justify-between gap-4 mb-8">
-            <h2 class="text-3xl font-bold text-slate-900">Professional Certifications</h2>
+    <main class="max-w-6xl mx-auto px-4 py-16">
+        
+        <div class="flex flex-col md:flex-row md:items-end justify-between gap-8 mb-12">
+            <div>
+                <h2 class="text-4xl font-black text-white tracking-tight uppercase">
+                    Professional <span class="text-sky-400">Certifications</span>
+                </h2>
+                <div class="h-1.5 w-20 bg-sky-500 mt-2 rounded-full"></div>
+                <p class="text-slate-400 mt-4 text-sm max-w-md italic">
+                    Validated expertise in Project Management, GIS Engineering, and Data Analytics.
+                </p>
+            </div>
+
             <div class="flex flex-wrap gap-2" id="cert-filters">
-                <button class="cert-filter-btn bg-blue-600 text-white px-4 py-2 rounded-full shadow-sm text-sm" data-year="all">All</button>
-                <button class="cert-filter-btn bg-white border text-slate-600 px-4 py-2 rounded-full shadow-sm text-sm" data-year="2024">2024</button>
-                <button class="cert-filter-btn bg-white border text-slate-600 px-4 py-2 rounded-full shadow-sm text-sm" data-year="2023">2023</button>
-                <button class="cert-filter-btn bg-white border text-slate-600 px-4 py-2 rounded-full shadow-sm text-sm" data-year="2022">2022</button>
+                <button class="filter-btn active-filter" data-year="all">All</button>
+                <button class="filter-btn" data-year="2024">2024</button>
+                <button class="filter-btn" data-year="2023">2023</button>
+                <button class="filter-btn" data-year="2022">2022</button>
             </div>
         </div>
 
-        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8" id="cert-container">
+        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 mb-20" id="cert-container">
+            <div class="col-span-full py-20 text-center">
+                <div class="inline-block animate-spin rounded-full h-8 w-8 border-t-2 border-sky-500 border-r-2 border-transparent mb-4"></div>
+                <p class="text-slate-500 font-mono text-xs uppercase tracking-widest">Validating Credentials...</p>
             </div>
-    </div>
+        </div>
+    </main>
+
 </body>
 </html>
